--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -3,6 +3,8 @@
 @tailwind utilities;
 
 @layer base {
+/* variables */
+
 	:root {
 		/* shared */
 		--radius: 0.5rem;
@@ -119,22 +121,6 @@
 	}
 
 	/* global styling */
-
-	html {
-		min-height: 100vh;
-	}
-
-	body {
-		min-height: 100%;
-		background-color: rgb(255, 255, 255);
-		color: rgb(0, 0, 0);
-		min-height: 100vh;
-	}
-
-	html[data-mode="dark"] > body {
-		background-color: rgb(10, 10, 10);
-		color: rgb(255, 255, 255);
-	}
 
 	html[data-animation="disabled"] * {
 		animation-duration: 0ms !important;
